--- a/CalculadoraRPN.css
+++ b/CalculadoraRPN.css
@@ -32,7 +32,7 @@ input[value="ENTER"]{
 }
 
 /*Especifidad (011)*/
-input[type=button]  {
+input[type=submit]  {
     border-radius: 5%;
     
     padding: 1em;
